--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
                     </ul>
                   </div>
                 </div>
-                <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis et
-                  dicta, molestias...
+                <p class="definition">Unir personas o cosas diversas con un fin determinado.
                 </p>
                 <a href="palabra_detalle.html" class="link"><i class='bx bx-right-arrow-alt'></i>Ver más</a>
                 <div class="box_main_item_info">
@@ -117,7 +116,7 @@
                 </div>
                 <div class="box_selection_meta">
                   <div class="title">
-                    <h2>palabra</h2>
+                    <h2>alocar</h2>
                   </div>
                   <div class="clicks">
                     <ul class="list-unstyled list-inline">
@@ -135,8 +134,7 @@
                   </div>
                 </div>
                 <div class="box_selection_info">
-                  <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis et
-                    dicta, molestias...
+                  <p class="definition">Enloquecer o causar locura o perturbación a una persona.
                   </p>
                   <a href="palabra_detalle.html" class="link"><i class='bx bx-right-arrow-alt'></i>Ver más</a>
                 </div>
@@ -151,7 +149,7 @@
                 </div>
                 <div class="box_selection_meta">
                   <div class="title">
-                    <h2>palabra</h2>
+                    <h2>Bastardear</h2>
                   </div>
                   <div class="clicks">
                     <ul class="list-unstyled list-inline">
@@ -169,8 +167,7 @@
                   </div>
                 </div>
                 <div class="box_selection_info">
-                  <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis et
-                    dicta, molestias...
+                  <p class="definition">Perder [una cosa] su bondad o pureza primitivas.
                   </p>
                   <a href="palabra_detalle.html" class="link"><i class='bx bx-right-arrow-alt'></i>Ver más</a>
                 </div>
@@ -194,7 +191,7 @@
                 </div>
                 <div class="box_selection_meta">
                   <div class="title">
-                    <h2>palabra</h2>
+                    <h2>batallar</h2>
                   </div>
                   <div class="clicks">
                     <ul class="list-unstyled list-inline">
@@ -211,8 +208,7 @@
                     </ul>
                   </div>
                 </div>
-                <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis et
-                  dicta, molestias...
+                <p class="definition">Trabajar con mucho esfuerzo para vencer los obstáculos y conseguir un fin.
                 </p>
                 <a href="palabra_detalle.html" class="link"><i class='bx bx-right-arrow-alt'></i>Ver más</a>
                 <div class="box_selection_info">
@@ -228,7 +224,7 @@
                 </div>
                 <div class="box_selection_meta">
                   <div class="title">
-                    <h2>palabra</h2>
+                    <h2>codificar</h2>
                   </div>
                   <div class="clicks">
                     <ul class="list-unstyled list-inline">
@@ -246,8 +242,7 @@
                   </div>
                 </div>
                 <div class="box_selection_info">
-                  <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis et
-                    dicta, molestias...
+                  <p class="definition">Enunciar un mensaje o expresar una idea mediante un código.
                   </p>
                   <a href="palabra_detalle.html" class="link"><i class='bx bx-right-arrow-alt'></i>Ver más</a>
                 </div>
@@ -262,7 +257,7 @@
                 </div>
                 <div class="box_selection_meta">
                   <div class="title">
-                    <h2>palabra</h2>
+                    <h2>Bondadoso/a</h2>
                   </div>
                   <div class="clicks">
                     <ul class="list-unstyled list-inline">
@@ -280,8 +275,7 @@
                   </div>
                 </div>
                 <div class="box_selection_info">
-                  <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis et
-                    dicta, molestias...
+                  <p class="definition">Que es de carácter virtuoso y amable, que está lleno de bondad.
                   </p>
                   <a href="palabra_detalle.html" class="link"><i class='bx bx-right-arrow-alt'></i>Ver más</a>
                 </div>
