--- a/palabra_detalle.html
+++ b/palabra_detalle.html
@@ -42,10 +42,10 @@
       <div class="box_palabra_detalle">
         <div class="box_palabra_detalle_titles">
           <div class="sintaxis">
-            <p>adjetivo</p>
+            <p>verbo</p>
           </div>
           <div class="title">
-            <h1>Palabra</h1>
+            <h1>Combinar</h1>
           </div>
           <div class="clicks">
             <ul class="list-unstyled list-inline">
@@ -81,33 +81,28 @@
               <div class="note">
                 <ul class="list-unstyled">
                   <li>
-                    <p><span>1</span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos accusamus soluta
-                      doloribus, fugiat
-                      illum dicta, deserunt ex dolores vero dolor maxime necessitatibus iure facilis rem perferendis
-                      ipsam optio officia. Nam.</p>
+                    <p><span>1.</span>Unir personas o cosas diversas con un fin determinado.</p>
                   </li>
                   <li>
-                    <p><span>2</span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos accusamus soluta
-                      doloribus, fugiat
-                      illum dicta, deserunt ex dolores vero dolor maxime necessitatibus iure facilis rem perferendis
-                      ipsam optio officia. Nam.</p>
+                    <p><span>2.</span>Organizar o disponer personas, cosas o acciones de forma que se favorezca el
+                      funcionamiento o desarrollo armónico o adecuado de algo.</p>
                   </li>
                 </ul>
               </div>
               <div class="list-simila sinonimos">
                 <ul class="list-unstyled">
-                  <li>palabra</li>
-                  <li>palabra</li>
-                  <li>palabra</li>
-                  <li>palabra</li>
+                  <li>unir</li>
+                  <li>juntar</li>
+                  <li>coordinar</li>
+                  <li>integrar</li>
                 </ul>
               </div>
               <div class="list-simila antonimos">
                 <ul class="list-unstyled">
-                  <li>palabra</li>
-                  <li>palabra</li>
-                  <li>palabra</li>
-                  <li>palabra</li>
+                  <li>descomponer</li>
+                  <li>desintegrar</li>
+                  <li>desunir</li>
+                  <li>separar</li>
                 </ul>
               </div>
             </div>
@@ -132,16 +127,20 @@
               <div class="ejemplo">
                 <ul class="list-unstyled">
                   <li>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos accusamus soluta
-                      doloribus, fugiat
-                      illum dicta, deserunt ex dolores vero dolor maxime necessitatibus iure facilis rem perferendis
-                      ipsam optio officia. Nam.</p>
+                    <p>Tienes que combinar cartas del mismo palo que formen una escala de color o dos grupos de tres
+                      cartas con el mismo valor.</p>
                   </li>
                   <li>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos accusamus soluta
-                      doloribus, fugiat
-                      illum dicta, deserunt ex dolores vero dolor maxime necessitatibus iure facilis rem perferendis
-                      ipsam optio officia. Nam.</p>
+                    <p>Bailar es combinar movimientos corporales solo o acompañado.</p>
+                  </li>
+                  <li>
+                    <p>los jugadores se combinaron para lograr la victoria.</p>
+                  </li>
+                  <li>
+                    <p>Combinar la camisa con el pantalón..</p>
+                  </li>
+                  <li>
+                    <p>La falda no te combina bien con la camisa</p>
                   </li>
                 </ul>
               </div>
