--- a/palabras.html
+++ b/palabras.html
@@ -89,7 +89,7 @@
                   </div>
                   <div class="box_selection_meta">
                     <div class="title">
-                      <h2>palabra</h2>
+                      <h2>Ausente</h2>
                     </div>
                     <div class="clicks">
                       <ul class="list-unstyled list-inline">
@@ -106,8 +106,8 @@
                       </ul>
                     </div>
                   </div>
-                  <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis et
-                    dicta, molestias...
+                  <p class="definition"> Que no está en un lugar al mismo tiempo que la persona que habla o de la que se
+                    habla, o en el momento en que sucede una cosa.
                   </p>
                   <a href="palabra_detalle.html" class="link"><i class='bx bx-right-arrow-alt'></i>Ver más</a>
                   <div class="box_main_item_info">
@@ -123,7 +123,7 @@
                   </div>
                   <div class="box_selection_meta">
                     <div class="title">
-                      <h2>palabra</h2>
+                      <h2>Abarcar</h2>
                     </div>
                     <div class="clicks">
                       <ul class="list-unstyled list-inline">
@@ -141,9 +141,7 @@
                     </div>
                   </div>
                   <div class="box_selection_info">
-                    <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis
-                      et
-                      dicta, molestias...
+                    <p class="definition">Contener o comprender [una cosa] dentro de sí lo que se expresa.
                     </p>
                     <a href="palabra_detalle.html" class="link"><i class='bx bx-right-arrow-alt'></i>Ver más</a>
                   </div>
@@ -158,7 +156,7 @@
                   </div>
                   <div class="box_selection_meta">
                     <div class="title">
-                      <h2>palabra</h2>
+                      <h2>Asustar</h2>
                     </div>
                     <div class="clicks">
                       <ul class="list-unstyled list-inline">
@@ -176,9 +174,7 @@
                     </div>
                   </div>
                   <div class="box_selection_info">
-                    <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis
-                      et
-                      dicta, molestias...
+                    <p class="definition">Causar un susto o impresión momentánea de miedo.
                     </p>
                     <a href="palabra_detalle.html" class="link"><i class='bx bx-right-arrow-alt'></i>Ver más</a>
                   </div>
@@ -193,7 +189,7 @@
                   </div>
                   <div class="box_selection_meta">
                     <div class="title">
-                      <h2>palabra</h2>
+                      <h2>Arder</h2>
                     </div>
                     <div class="clicks">
                       <ul class="list-unstyled list-inline">
@@ -210,8 +206,7 @@
                       </ul>
                     </div>
                   </div>
-                  <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis et
-                    dicta, molestias...
+                  <p class="definition">Estar [una cosa] encendida o quemándose.
                   </p>
                   <a href="palabra_detalle.html" class="link"><i class='bx bx-right-arrow-alt'></i>Ver más</a>
                   <div class="box_main_item_info">
@@ -227,7 +222,7 @@
                   </div>
                   <div class="box_selection_meta">
                     <div class="title">
-                      <h2>palabra</h2>
+                      <h2>abducir</h2>
                     </div>
                     <div class="clicks">
                       <ul class="list-unstyled list-inline">
@@ -245,9 +240,7 @@
                     </div>
                   </div>
                   <div class="box_selection_info">
-                    <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis
-                      et
-                      dicta, molestias...
+                    <p class="definition">Secuestrar extraterrestres o espíritus a una persona.
                     </p>
                     <a href="palabra_detalle.html" class="link"><i class='bx bx-right-arrow-alt'></i>Ver más</a>
                   </div>
@@ -262,7 +255,7 @@
                   </div>
                   <div class="box_selection_meta">
                     <div class="title">
-                      <h2>palabra</h2>
+                      <h2>alocar</h2>
                     </div>
                     <div class="clicks">
                       <ul class="list-unstyled list-inline">
@@ -280,112 +273,12 @@
                     </div>
                   </div>
                   <div class="box_selection_info">
-                    <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis
-                      et
-                      dicta, molestias...
+                    <p class="definition">Enloquecer o causar locura o perturbación a una persona.
                     </p>
                     <a href="palabra_detalle.html" class="link"><i class='bx bx-right-arrow-alt'></i>Ver más</a>
                   </div>
                 </div>
               </div>
-              <div class="col-4">
-                <div class="box_selection">
-                  <div class="box_selection_video">
-                    <video muted class="control_video">
-                      <source src="./videos/palabra_c/combinar/combinar_definicion.mp4" type="video/mp4">
-                    </video>
-                  </div>
-                  <div class="box_selection_meta">
-                    <div class="title">
-                      <h2>palabra</h2>
-                    </div>
-                    <div class="clicks">
-                      <ul class="list-unstyled list-inline">
-                        <li>
-                          <button>
-                            <i class='bx bx-like'></i>
-                          </button>
-                        </li>
-                        <li>
-                          <button>
-                            <i class='bx bx-bookmark'></i>
-                          </button>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                  <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis
-                    et
-                    dicta, molestias...
-                  </p>
-                  <a href="palabra_detalle.html" class="link"><i class='bx bx-right-arrow-alt'></i>Ver más</a>
-                  <div class="box_main_item_info">
-                  </div>
-                </div>
-              </div>
-              <div class="col-4">
-                <div class="box_selection">
-                  <div class="video"></div>
-                  <div class="box_selection_meta">
-                    <div class="title">
-                      <h2>palabra</h2>
-                    </div>
-                    <div class="clicks">
-                      <ul class="list-unstyled list-inline">
-                        <li>
-                          <button>
-                            <i class='bx bx-like'></i>
-                          </button>
-                        </li>
-                        <li>
-                          <button>
-                            <i class='bx bx-bookmark'></i>
-                          </button>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                  <div class="box_selection_info">
-                    <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis
-                      et
-                      dicta, molestias...
-                    </p>
-                    <a href="palabra_detalle.html" class="link"><i class='bx bx-right-arrow-alt'></i>Ver más</a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-4">
-                <div class="box_selection">
-                  <div class="video"></div>
-                  <div class="box_selection_meta">
-                    <div class="title">
-                      <h2>palabra</h2>
-                    </div>
-                    <div class="clicks">
-                      <ul class="list-unstyled list-inline">
-                        <li>
-                          <button>
-                            <i class='bx bx-like'></i>
-                          </button>
-                        </li>
-                        <li>
-                          <button>
-                            <i class='bx bx-bookmark'></i>
-                          </button>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                  <div class="box_selection_info">
-                    <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis
-                      et
-                      dicta, molestias...
-                    </p>
-                    <a href="palabra_detalle.html" class="link"><i class='bx bx-right-arrow-alt'></i>Ver más</a>
-                  </div>
-                </div>
-              </div>
-
             </div>
           </div>
         </div>
