--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
           </div>
           <div class="header_search">
             <input type="text" class="input_search form-control shadow-none" placeholder="Buscador una palabra">
+            <i class='bx bx-slider-alt'></i>
             <button class="btnSearch">
               <i class='bx bx-search'></i>
             </button>
@@ -111,12 +112,12 @@
               <div class="box_selection">
                 <div class="box_selection_video">
                   <video muted class="control_video">
-                    <source src="./videos/palabra_c/combinar/combinar_sena.mp4" type="video/mp4">
+                    <source src="./videos/ausente.mp4" type="video/mp4">
                   </video>
                 </div>
                 <div class="box_selection_meta">
                   <div class="title">
-                    <h2>alocar</h2>
+                    <h2>Ausente</h2>
                   </div>
                   <div class="clicks">
                     <ul class="list-unstyled list-inline">
@@ -134,7 +135,8 @@
                   </div>
                 </div>
                 <div class="box_selection_info">
-                  <p class="definition">Enloquecer o causar locura o perturbación a una persona.
+                  <p class="definition">Que no está en un lugar al mismo tiempo que la persona que habla o de la que se
+                    habla, o en el momento en que sucede una cosa.
                   </p>
                   <a href="palabra_detalle.html" class="link"><i class='bx bx-right-arrow-alt'></i>Ver más</a>
                 </div>
@@ -144,12 +146,12 @@
               <div class="box_selection">
                 <div class="box_selection_video">
                   <video muted class="control_video">
-                    <source src="./videos/palabra_c/combinar/combinar_definicion.mp4" type="video/mp4">
+                    <source src="./videos/Bondadoso.mp4" type="video/mp4">
                   </video>
                 </div>
                 <div class="box_selection_meta">
                   <div class="title">
-                    <h2>Bastardear</h2>
+                    <h2>Bondadoso/a</h2>
                   </div>
                   <div class="clicks">
                     <ul class="list-unstyled list-inline">
@@ -167,7 +169,7 @@
                   </div>
                 </div>
                 <div class="box_selection_info">
-                  <p class="definition">Perder [una cosa] su bondad o pureza primitivas.
+                  <p class="definition">Que es de carácter virtuoso y amable, que está lleno de bondad.
                   </p>
                   <a href="palabra_detalle.html" class="link"><i class='bx bx-right-arrow-alt'></i>Ver más</a>
                 </div>
@@ -257,7 +259,7 @@
                 </div>
                 <div class="box_selection_meta">
                   <div class="title">
-                    <h2>Bondadoso/a</h2>
+                    <h2>Bastardear</h2>
                   </div>
                   <div class="clicks">
                     <ul class="list-unstyled list-inline">
@@ -275,7 +277,7 @@
                   </div>
                 </div>
                 <div class="box_selection_info">
-                  <p class="definition">Que es de carácter virtuoso y amable, que está lleno de bondad.
+                  <p class="definition">Perder [una cosa] su bondad o pureza primitivas.
                   </p>
                   <a href="palabra_detalle.html" class="link"><i class='bx bx-right-arrow-alt'></i>Ver más</a>
                 </div>
