--- a/palabra_detalle.html
+++ b/palabra_detalle.html
@@ -69,7 +69,7 @@
                 <h3>Seña</h3>
               </div>
               <div class="box_selection_video">
-                <video muted class="control_video">
+                <video muted controls class="control_video">
                   <source src="./videos/palabra_c/combinar/combinar_definicion.mp4" type="video/mp4">
                 </video>
               </div>
@@ -115,7 +115,7 @@
                 <h3>Aclaración</h3>
               </div>
               <div class="box_selection_video">
-                <video muted class="control_video">
+                <video muted controls class="control_video">
                   <source src="./videos/palabra_c/combinar/combinar_definicion.mp4" type="video/mp4">
                 </video>
               </div>
