--- a/palabras.html
+++ b/palabras.html
@@ -42,6 +42,7 @@
       <div class="box_palabras">
         <div class="box_palabras_search">
           <input type="text" class="input_search form-control shadow-none" placeholder="Buscador una palabra">
+          <i class='bx bx-slider-alt'></i>
           <button class="btnSearch">
             <i class='bx bx-search'></i>
           </button>
