--- a/palabra_detalle.html
+++ b/palabra_detalle.html
@@ -70,7 +70,7 @@
               </div>
               <div class="box_selection_video">
                 <video muted controls class="control_video">
-                  <source src="./videos/palabra_c/combinar/combinar_definicion.mp4" type="video/mp4">
+                  <source src="./videos/sena_combinar.mp4" type="video/mp4">
                 </video>
               </div>
             </div>
@@ -116,7 +116,7 @@
               </div>
               <div class="box_selection_video">
                 <video muted controls class="control_video">
-                  <source src="./videos/palabra_c/combinar/combinar_definicion.mp4" type="video/mp4">
+                  <source src="./videos/definicion_combinar.MOV" type="video/mp4">
                 </video>
               </div>
             </div>
