--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <div class="box_selection">
                 <div class="box_selection_video">
                   <video muted class="control_video">
-                    <source src="./videos/palabra_c/combinar/combinar_definicion.mp4" type="video/mp4">
+                    <source src="./videos/definicion_combinar.MOV" type="video/mp4">
                   </video>
                 </div>
                 <div class="box_selection_meta">
@@ -188,7 +188,7 @@
               <div class="box_selection">
                 <div class="box_selection_video">
                   <video muted class="control_video">
-                    <source src="./videos/palabra_c/combinar/combinar_definicion.mp4" type="video/mp4">
+                    <source src="./videos/batallar.MOV" type="video/mp4">
                   </video>
                 </div>
                 <div class="box_selection_meta">
@@ -221,7 +221,7 @@
               <div class="box_selection">
                 <div class="box_selection_video">
                   <video muted class="control_video">
-                    <source src="./videos/palabra_c/combinar/combinar_definicion.mp4" type="video/mp4">
+                    <source src="./videos/codificar.MOV" type="video/mp4">
                   </video>
                 </div>
                 <div class="box_selection_meta">
@@ -254,12 +254,12 @@
               <div class="box_selection">
                 <div class="box_selection_video">
                   <video muted class="control_video">
-                    <source src="./videos/palabra_c/combinar/combinar_definicion.mp4" type="video/mp4">
+                    <source src="./videos/bifurcar.mp4" type="video/mp4">
                   </video>
                 </div>
                 <div class="box_selection_meta">
                   <div class="title">
-                    <h2>Bastardear</h2>
+                    <h2>Bifurcar</h2>
                   </div>
                   <div class="clicks">
                     <ul class="list-unstyled list-inline">
