--- a/palabras.html
+++ b/palabras.html
@@ -85,7 +85,7 @@
                 <div class="box_selection">
                   <div class="box_selection_video">
                     <video muted class="control_video">
-                      <source src="./videos/palabra_c/combinar/combinar_definicion.mp4" type="video/mp4">
+                      <source src="./videos/ausente.mp4" type="video/mp4">
                     </video>
                   </div>
                   <div class="box_selection_meta">
@@ -152,7 +152,7 @@
                 <div class="box_selection">
                   <div class="box_selection_video">
                     <video muted class="control_video">
-                      <source src="./videos/palabra_c/combinar/combinar_definicion.mp4" type="video/mp4">
+                      <source src="./videos/batallar.MOV" type="video/mp4">
                     </video>
                   </div>
                   <div class="box_selection_meta">
@@ -185,7 +185,7 @@
                 <div class="box_selection">
                   <div class="box_selection_video">
                     <video muted class="control_video">
-                      <source src="./videos/palabra_c/combinar/combinar_definicion.mp4" type="video/mp4">
+                      <source src="./videos/codificar.MOV" type="video/mp4">
                     </video>
                   </div>
                   <div class="box_selection_meta">
@@ -218,7 +218,7 @@
                 <div class="box_selection">
                   <div class="box_selection_video">
                     <video muted class="control_video">
-                      <source src="./videos/palabra_c/combinar/combinar_definicion.mp4" type="video/mp4">
+                      <source src="./videos/Bondadoso.mp4" type="video/mp4">
                     </video>
                   </div>
                   <div class="box_selection_meta">
@@ -251,7 +251,7 @@
                 <div class="box_selection">
                   <div class="box_selection_video">
                     <video muted class="control_video">
-                      <source src="./videos/palabra_c/combinar/combinar_definicion.mp4" type="video/mp4">
+                      <source src="./videos/bifurcar.mp4" type="video/mp4">
                     </video>
                   </div>
                   <div class="box_selection_meta">
